--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Howl</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"/>
-   <link rel="stylesheet" type="text/css" href="public/css/main.css" />
+   	<link rel="stylesheet" type="text/css" href="public/css/main.css" />
+   	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+  	<script src="public/js/teamquery.js"></script>
   </head>
   <body>
     <div id="app"></div>
