Made the entire website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Howl</title>
+    <title>Jalapen.io</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"/>
    	<link rel="stylesheet" type="text/css" href="public/css/main.css" />
    	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
